<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/common_bg_color" >
    <cn.neuwljs.widget.layout.Widget_TitleLayout
        android:id="@+id/module_d_fragment_setting_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/module_d_margin_bottom"
        app:widget_titleText="@string/module_d_setting_title"
        app:widget_rightGone="true"
        app:widget_leftGone="false" />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <cn.neuwljs.widget.layout.Widget_SettingBarLayout
            android:id="@+id/module_d_fragment_setting_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:widget_setItemName="@string/module_d_setting_head_image" />
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/module_d_fragment_setting_head_image"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="32dp"/>
    </FrameLayout>
    <cn.neuwljs.widget.layout.Widget_SettingBarLayout
        android:id="@+id/module_d_fragment_setting_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:widget_setItemName="@string/module_d_setting_name" />
    <cn.neuwljs.widget.layout.Widget_SettingBarLayout
        android:id="@+id/module_d_fragment_setting_college"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:widget_setItemName="@string/module_d_setting_college"/>
    <cn.neuwljs.widget.layout.Widget_SettingBarLayout
        android:id="@+id/module_d_fragment_setting_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:widget_setItemName="@string/module_d_setting_phone_number"/>
    <cn.neuwljs.widget.layout.Widget_SettingBarLayout
        android:id="@+id/module_d_fragment_setting_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:widget_setItemName="@string/module_d_setting_password" />
    <Button
        android:id="@+id/module_d_fragment_setting_quit"
        style="@style/module_d_button_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/module_d_setting_quit"
        android:textColor="@color/module_d_text_white_color"
        android:textSize="@dimen/module_d_sub_title" />
</LinearLayout>