<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="4dp" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/module_d_fragment_d_a_b_owner_head_image"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="8dp"
                android:src="@drawable/module_d_head_image_default"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_margin="8dp"
                android:gravity="center_vertical"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/module_d_fragment_d_a_b_owner_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:text="@string/module_d_test"
                    android:layout_marginBottom="8dp"/>
                <TextView
                    android:id="@+id/module_d_fragment_d_a_b_owner_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/module_d_test"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/module_d_fragment_d_a_b_owner_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="16sp"
            android:text="@string/module_d_test"
            android:layout_margin="8dp"/>
        <android.support.percent.PercentFrameLayout
            android:id="@+id/module_d_fragment_d_a_b_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/module_d_bg_card_1"
                android:adjustViewBounds="true"
                android:layout_margin="8dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                app:layout_marginStartPercent="40%" >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal"
                    android:layout_marginBottom="8dp" >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/module_d_fragment_d_b_c_hint_name"
                        android:textColor="#000000"
                        android:textSize="14sp"/>
                    <TextView
                        android:id="@+id/module_d_fragment_d_a_b_owner_name_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:textSize="14sp"
                        android:text="@string/module_d_test"
                        android:layout_marginLeft="16dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal"
                    android:layout_marginBottom="8dp" >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/module_d_fragment_d_b_c_hint_id"
                        android:textColor="#000000"
                        android:textSize="14sp" />
                    <TextView
                        android:id="@+id/module_d_fragment_d_a_b_owner_id_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:textSize="14sp"
                        android:text="@string/module_d_test"
                        android:layout_marginLeft="16dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal"
                    android:layout_marginBottom="8dp" >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/module_d_fragment_d_b_c_hint_collage"
                        android:textColor="#000000"
                        android:textSize="14sp" />
                    <TextView
                        android:id="@+id/module_d_fragment_d_a_b_owner_college_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:textSize="14sp"
                        android:text="@string/module_d_test"
                        android:layout_marginLeft="16dp" />
                </LinearLayout>
            </LinearLayout>
        </android.support.percent.PercentFrameLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>